# dotenv-rs

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
dotenv/: Cargo.toml
dotenv/examples/: simple.rs
dotenv/src/: iter.rs  lib.rs
dotenv/tests/: test-dotenv-iter.rs  test-from-filename-iter.rs  test-from-path-iter.rs  test-prefix.rs
dotenv_codegen/: Cargo.toml
dotenv_codegen_implementation/: Cargo.toml
dotenv_codegen_implementation/src/: lib.rs
dotenv_rs/: Cargo.toml
dotenv_rs/examples/: simple.rs
dotenv_rs/src/: iter.rs  lib.rs
dotenv_rs/tests/: test-child-dir.rs  test-default-location.rs  test-dotenv-iter.rs  test-from-filename-iter.rs  test-from-filename.rs  test-from-path-iter.rs  test-from-path.rs  test-get-vars.rs  test-prefix.rs  test-var.rs  test-variable-substitution.rs  test-vars.rs
dotenv_rs/tests/common/: mod.rs
