[package]
name = "dotenv"
version = "0.15.0"
authors = []
description = "A `dotenv` implementation for Rust"
homepage = "https://github.com/dotenv-rs/dotenv"
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
repository = "https://github.com/dotenv-rs/dotenv"
edition = "2018"

[[bin]]
name = "dotenv"
required-features = ["cli"]

[dependencies]
clap = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.0.0"

[features]
cli = ["clap"]
