[package]

name = "dotenv_codegen"
version = "0.15.0"
authors = [
  "pengbo <pengbotju@163.com>",
]
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/PengBoUESTC/dotenv-rs"
repository = "https://github.com/PengBoUESTC/dotenv-rs"
description = "A `dotenv` implementation for Rust"
edition = "2018"

[dependencies]
dotenv_codegen_implementation = { version = "0.15", path = "../dotenv_codegen_implementation" }
proc-macro-hack = "0.5"
