[package]
name = "dotenv_rs"
version = "0.16.1"
authors = [
  "pengbo <pengbotju@163.com>",
]
description = "A `dotenv` implementation for Rust"
homepage = "https://github.com/PengBoUESTC/dotenv-rs"
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
repository = "https://github.com/PengBoUESTC/dotenv-rs"
edition = "2018"

[[bin]]
name = "dotenv_rs"
required-features = ["cli"]

[dependencies]
clap = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.0.0"

[features]
cli = ["clap"]
